--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/github.io.loader.js";
       var config = {
-        dataUrl: buildUrl + "/github.io.data.gz",
-        frameworkUrl: buildUrl + "/github.io.framework.js.gz",
-        codeUrl: buildUrl + "/github.io.wasm.gz",
+        dataUrl: buildUrl + "/github.io.data",
+        frameworkUrl: buildUrl + "/github.io.framework.js",
+        codeUrl: buildUrl + "/github.io.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "AMAXG",
         productName: "Movie Theater",
