--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <div id="unity-fullscreen-button"></div>
         <div id="unity-build-title">Movie Theater</div>
       </div>
-      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/_74IMlRTASU?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <!--<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/_74IMlRTASU?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    -->
     </div>
     <script>
       var buildUrl = "Build";
