--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Movie Theater</title>
+    <title>Unity WebGL Player | Movie Theater_0.11</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -22,7 +22,7 @@
       <div id="unity-footer">
         <div id="unity-webgl-logo"></div>
         <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Movie Theater</div>
+        <div id="unity-build-title">Movie Theater_0.11</div>
       </div>
     </div>
     <script>
@@ -34,8 +34,8 @@
         codeUrl: buildUrl + "/github.io.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "AMAXG",
-        productName: "Movie Theater",
-        productVersion: "0.1",
+        productName: "Movie Theater_0.11",
+        productVersion: "0.11",
       };
 
       var container = document.querySelector("#unity-container");
